# esp32-s3-kws-demo

./: .gitignore  partitions.csv
components/edge_impluse/: CMakeLists.txt  README.txt
components/edge_impluse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impluse/tflite-model/: tflite_learn_1005910_6.h  tflite_learn_1005910_6.tflite
main/: CMakeLists.txt  i2s_audio.c  i2s_audio.h  idf_component.yml  main.c  main.cpp
